# swavelet

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: experiment_encoding_efficiency.py  experiment_threshold_sweep.py  librispeech_dataset.py  mitbih_dataset.py  spiking_doe_diagnostic.py
swavelet/: __init__.py  doe.py  dog.py  dot.py  haar.py  morlet.py  nir_export.py  signal_utils.py  spiking_doe.py  spiking_dog.py  spiking_dot.py  szu.py  temporal_integration.py  wavelet.py
tests/: conftest.py  test_bandpass_filter_norms.py  test_doe.py  test_dog.py  test_dot.py  test_haar.py  test_nir_export.py  test_nonspiking_vs_pywavelets.py  test_per_spike_decoupled.py  test_spiking_doe.py  test_spiking_dog.py  test_spiking_dot.py  test_szu.py
